--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,14 +18,20 @@
                         <tr>
                             <th>ID</th>
                             <th>Name</th>
-                            <th>@Email</th>
+                            <th>Email</th>
                             <th>Gender</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
                             <a href="#" class="btn border-shadow update">
                                 <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
                             </a>
@@ -33,6 +39,7 @@
                                 <span class="text-gradient"><i class="fas fa-times"></i></span>
                             </a>
                         </td>
+                    </tr>
                     </tbody>
                 </table>
             </form>
