comment added --commit

--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -2,6 +2,7 @@
 <%- include('partials/_header') %>
 <!-- /header -->
 
+<!-- ADD USER MAIN PAGE UI -->
 <!-- Main Site -->
 <main id="site-main">
     <div class="container">
