--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -14,9 +14,8 @@
             <h2 class="text-dark">Update User</h2>
             <span class="text-light">Use the below form to Update</span>
         </div>
-        <!-- update user form -->
+        <!-- UPDATE user -->
         <!-- form handling -->
-        <!-- action="/api/users"  -->
         <form method="POST" id="update_user">
             <div class="new_user">
                 <div class="form-group">
