--- a/views/partials/_show.ejs
+++ b/views/partials/_show.ejs
@@ -1,10 +1,11 @@
 <!-- TABLE UI -->
+<% for(var i=0; i < users.length; i++) {%>
 <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><%= i + 1%></td>
+    <td><%= users[i].name%></td>
+    <td><%= users[i].email%></td>
+    <td><%= users[i].gender%></td>
+    <td><%= users[i].status%></td>
     <td>
     <a href="/update_user" class="btn border-shadow update">
         <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
@@ -14,3 +15,4 @@
     </a>
 </td>
 </tr>
+<% } %>
