--- a/views/partials/_form.ejs
+++ b/views/partials/_form.ejs
@@ -1,7 +1,7 @@
  <!-- ADD NEW USER -->
  <!-- form handling -->
  <!-- action="/api/users"  -->
- <form method="POST" id="add_user">
+ <form action="/api/users" method="POST" id="add_user">
     <div class="new_user">
         <div class="form-group">
             <label for="name" class="text-light">Name</label>
