comment added -- init commit

--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -16,7 +16,7 @@
         </div>
         <!-- UPDATE user -->
         <!-- form handling -->
-        <form method="POST" id="update_user" autocomplete="on">
+        <form action="/api/users" method="POST" id="update_user" autocomplete="on">
             <div class="new_user">
                 <div class="form-group">
                     <label for="name" class="text-light">Name</label>
